# simple_robot_simulator

./: CMakeLists.txt  Cargo.toml  README.md
simple_robot_simulator/: CMakeLists.txt  Cargo.toml  package.xml
simple_robot_simulator/src/: simple_robot_simulator.rs  srs_frame_event_test.rs  srs_joint_event_test.rs
simple_robot_simulator_bringup/: CMakeLists.txt  README.md  package.xml
simple_robot_simulator_bringup/config/: bringup_with_ghost.rviz
simple_robot_simulator_bringup/launch/: ur_bringup.launch.py  ur_with_ghost_bringup.launch.py
simple_robot_simulator_bringup/scenario/ur10e/: base_link.json  rsp.json  rsp_tool0.json  svt.json  svt_tcp.json
simple_robot_simulator_msgs/: CMakeLists.txt  package.xml
simple_robot_simulator_msgs/action/: SimpleRobotControl.action
simple_robot_simulator_tfbc/: CMakeLists.txt  Cargo.toml  package.xml
simple_robot_simulator_tfbc/src/: broadcaster.rs
src/: simple_robot_simulator.rs
